<resources>
    <string name="app_name">Renting Company</string>
    <string name="title_activity_renting_agency">RentingAgencyActivity</string>
    <string name="title_activity_tenant">TenantActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_search">Search For Property</string>
    <string name="menu_edit">Edit a Property</string>
    <string name="menu_requests">View Requests</string>
    <string name="menu_add">Add a Property</string>
    <string name="menu_tenant_history">History</string>
    <string name="menu_agency_history">History</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_property_search">PropertySearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!--df dialog-->
    <dimen name="headerTextSize">25sp</dimen>
    <dimen name="newsMoreTextSize">12sp</dimen>
    <dimen name="loginViewsMargin">20dp</dimen>
    <style name="viewParent">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    <style name="viewParent.headerText">
        <item name="android:textColor">@color/contentTextColor</item>
        <item name="android:textSize">@dimen/headerTextSize</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="viewParent.headerText.NoMode">
        <item name="android:textColor">@color/darkTextColor</item>
    </style>

    <style name="parent">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    <style name="modifiedEditText" parent="parent">
        <item name="android:textSize">@dimen/newsMoreTextSize</item>
        <item name="android:backgroundTint">@color/primaryTextColor</item>
    </style>

    <style name="loginButton" parent="viewParent">
        <item name="android:background">@drawable/button_background_blue</item>
        <item name="android:textColor">@color/whiteTextColor</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="spinnerHintText" parent="parent">
        <item name="android:textSize">@dimen/newsMoreTextSize</item>
        <item name="android:textColor">@color/orange</item>
        <item name="android:paddingLeft">5dp</item>
    </style>



</resources>
